--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <input type="email" name="email" id="email" class="campo email" placeholder="" autocomplete="on" required="required" />
 
         <label for="telefones">Telefone(s):</label>
-        <input type="text" name="telefones[]" id="telefones" class="campo telefones" placeholder="" autocomplete="off" />
+        <input type="text" name="telefones[]" id="telefones" class="campo telefones" placeholder="" autocomplete="off" readonly="readonly" />
 
         <label for="mensagem">Mensagem:</label>
         <textarea name="mensagem" class="campo mensagem" placeholder="" required="required"></textarea>
